--- a/Components/Pages/Counter.razor
+++ b/Components/Pages/Counter.razor
@@ -12,8 +12,15 @@
 @code {
     private int currentCount = 0;
 
+    [Parameter]
+    public int IncrementAmount { get; set; } = 1;
+
+    [Parameter]
+    public string LogLine { get; set; } = "Incrementing!";
+
     private void IncrementCount()
     {
-        currentCount++;
+        Console.WriteLine(LogLine);
+        currentCount += IncrementAmount;
     }
 }
